[package]
name = "rdkafka_hang"
version = "0.1.0"
edition = "2021"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio / Futures
async-stream = { version = "0.3.3", default-features = false }
async-trait = { version = "0.1.57", default-features = false }
futures = { version = "0.3.21", default-features = false, features = ["compat", "io-compat"], package = "futures" }
tokio = { version = "1.20.1", default-features = false, features = ["full"] }
tokio-openssl = { version = "0.6.3", default-features = false }
tokio-stream = { version = "0.1.9", default-features = false, features = ["net", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
console-subscriber = { version = "0.1.7", default-features = false, optional = true }
snafu = { version = "0.7.3", features = ["futures"] }
rdkafka = { version = "0.28.0", features = ["tokio", "libz", "ssl", "zstd"] }
stream-cancel = "0.8.1"
